# alsa-haskell

./: LICENSE  alsa.cabal  halsa.cabal
Sound/: ALSA.chs  Alsa.chs  Alsa.hs
Sound/ALSA/: C2HS.hs
Sound/Alsa/: C2HS.hs  Core.chs  Error.hs  Sequencer.hs
Sound/Alsa/Sequencer/: Area.hsc  Client.hs  Errors.hs  Event.hs  Marshal.hsc  Port.hs  Queue.hs  Sequencer.hs  Types.hsc
examples/: Makefile  duplex.hs  play.hs  record.hs  volume_meter.hs
tests/: alsa-seq-tests.cabal  test1.hs  test2.hs  test3.hs  test4.hs  test5.hs
