Name: alsa
Version: 0.1
Copyright: Bjorn Bringert
Maintainer: bjorn@bringert.net
Author: Bjorn Bringert
License: BSD3
build-depends: base
Extensions: ForeignFunctionInterface
Synopsis: Binding to the ALSA Library API.
Ghc-options: 
Exposed-Modules: Sound.Alsa,Sound.Alsa.Core
Other-modules: Sound.Alsa.C2HS
Includes: alsa/asoundlib.h
Extra-libraries: asound
